프로젝트 (노트 앱) 추가

--- a/index.html
+++ b/index.html
@@ -193,6 +193,21 @@
           <div class="portfolio_wrap-container">
             <div class="portfolio_item filter-next">
               <div class="portfolio_wrap">
+                <img src="./imgs/노트 앱.gif" alt="" class="img-fluid" />
+                <div class="portfolio_info">
+                  <h4>노트 앱</h4>
+                  <p>23.10.13 ~ 23.10.17 (1인 프로젝트)</p>
+                  <div class="portfolio_links">
+                    <a
+                      href="https://github.com/LEEJINYOUN/Note-App_Next-tsx-.git"
+                      ><i class="fa-brands fa-github"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="portfolio_item filter-next">
+              <div class="portfolio_wrap">
                 <img src="./imgs/웹툰사이트.gif" alt="" class="img-fluid" />
                 <div class="portfolio_info">
                   <h4>웹툰사이트</h4>
